add dockerfile, finish processing order workflow